--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
 * {
   font-family: sans-serif;
 }
+
+main {
+  padding: 0 25%;
+}
+
+#mini-projects, #main-projects {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
