Felx directioned in Row

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ main {
 
 #mini-projects, #main-projects {
   display: flex;
+  flex-direction: row;
   width: 100%;
   align-items: center;
   justify-content: center;
