--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ main {
 
 #mini-projects, #main-projects {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   align-items: center;
   justify-content: center;
