--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ main {
 }
 
 #mini-projects, #main-projects {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   width: 100%;
   align-items: center;
   justify-content: center;
