--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,11 @@ main {
   background-color: lightblue;
   border: 1px solid #333;
 }
+
+#mini-projects button>a, #main-projects button>a
+{
+  color: black;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: larger;
+}
