--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,9 @@ main {
   border: 1px solid #333;
 }
 
-#mini-projects a, #main-projects a
+a
 {
+  text-decoration: none;
   color: black;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
