--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,11 @@ a
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   font-size: larger;
+  transition: font-size 1s ease-in-out, color 1s ease-in-out;
 }
 
 a:hover
 {
   font-size: x-large;
   color: white;
-  transition: 1s ease-in-out;
 }
